updated md files

--- a/maps/pubspec.yaml
+++ b/maps/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 
   mapmyindia_gl: ^0.2.2
   location: ^4.2.0
+  mapmyindia_nearby_plugin: ^0.1.0
+  fluttertoast: ^8.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
