--- a/maps/pubspec.yaml
+++ b/maps/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   location: ^4.2.0
   mapmyindia_nearby_plugin: ^0.1.0
   fluttertoast: ^8.0.6
-  flutter_logs: ^2.0.6
-  
+  mailer: ^5.0.1
+  shared_preferences: ^2.0.15
+  flutter_sms: ^2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
